src/objects/Region__c.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Reigons</relationshipLabel>
        <relationshipName>Reigons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sydney_Timezone_Offset__c</fullName>
        <label>Sydney Timezone Offset</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>timeZone__c</fullName>
        <description>tz database name</description>
        <inlineHelpText>tz database name</inlineHelpText>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sydney_Timezone_Offset__c</columns>
        <columns>timeZone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>